[package]
name = "configuration"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

[dependencies]
offchain-core = { path = "../offchain-core" }

im = "15.0"
rpassword = "5.0.1"
serde_json = "1.0"
structopt = "0.3"
serde = "1.0.0"
snafu = "0.6"
toml = "0.5.8"
